--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="mortar">#545454</color>
+    <color name="big_stone">#303841</color>
+    <color name="casper">#b2b8bd</color>
+    <color name="midnight">#011627</color>
+    <color name="pale_turquoise">#c0f6f6</color>
 </resources>
