--- a/app/src/main/res/layout/sources_activity.xml
+++ b/app/src/main/res/layout/sources_activity.xml
@@ -5,13 +5,6 @@
     android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-<!--    <androidx.appcompat.widget.Toolbar-->
-<!--        android:id="@+id/toolbar"-->
-<!--        app:title="@string/app_name"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        app:layout_constraintTop_toTopOf="parent" />-->
-
     <androidx.recyclerview.widget.RecyclerView
         android:layout_marginTop="@dimen/space_x2"
         android:id="@+id/tab_rv"
@@ -23,6 +16,7 @@
         android:id="@+id/rv"
         android:layout_marginTop="@dimen/space_x2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/space_x0"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tab_rv" />
 </androidx.constraintlayout.widget.ConstraintLayout>
