--- a/app/src/main/res/layout/item_source.xml
+++ b/app/src/main/res/layout/item_source.xml
@@ -33,7 +33,7 @@
         <TextView
             android:id="@+id/category_txt"
             style="@style/FontRegular.Midnight.12"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingStart="@dimen/space_x2"
             android:paddingTop="@dimen/space_half"
