--- a/app/src/main/res/layout/item_source.xml
+++ b/app/src/main/res/layout/item_source.xml
@@ -27,7 +27,7 @@
         app:cardBackgroundColor="@color/pale_turquoise"
         app:cardCornerRadius="@dimen/space_x1"
         app:cardElevation="@dimen/space_x0"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/arrow_iv"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
@@ -59,4 +59,14 @@
         android:layout_marginTop="@dimen/space_x2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/description_txt" />
+
+    <ImageView
+        android:id="@+id/arrow_iv"
+        android:layout_marginEnd="@dimen/space_x1"
+        android:src="@drawable/ic_right_arrow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
