--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="casper">#b2b8bd</color>
     <color name="midnight">#011627</color>
     <color name="pale_turquoise">#c0f6f6</color>
+    <color name="cerise">#da3e52</color>
 </resources>
