--- a/app/src/main/res/layout/article_activity.xml
+++ b/app/src/main/res/layout/article_activity.xml
@@ -2,9 +2,33 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:focusable="false"
+    android:focusableInTouchMode="true"
     android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <TextView
+        android:id="@+id/search_txt"
+        style="@style/FontSemiBold.Midnight.12"
+        android:layout_marginStart="@dimen/space_x2"
+        android:layout_marginTop="@dimen/space_x2"
+        android:text="@string/hint_search"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/search_edt"
+        style="@style/TextInput"
+        app:hintEnabled="true"
+        android:hint="@string/hint_search"
+        android:layout_marginTop="@dimen/space_half"
+        android:layout_marginEnd="@dimen/space_x2"
+        android:layout_marginStart="@dimen/space_x2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/search_txt"
+        app:passwordToggleEnabled="false" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv"
@@ -12,7 +36,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/space_x0"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/search_edt"/>
 
     <View
         android:id="@+id/guideline"
