--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,4 +14,19 @@
         <item name="android:layout_height">@dimen/space_x3</item>
         <item name="android:layout_width">match_parent</item>
     </style>
+
+    <style name="TextInput">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:minHeight">@dimen/space_x7</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center|start</item>
+        <item name="android:inputType">text</item>
+        <item name="android:imeOptions">actionDone</item>
+        <item name="android:paddingStart">@dimen/space_x2</item>
+        <item name="android:paddingEnd">@dimen/space_x2</item>
+        <item name="android:textSize">@dimen/text_size_16sp</item>
+        <item name="android:background">@drawable/et_border</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:textColor">@color/midnight</item>
+    </style>
 </resources>
